[gd_scene load_steps=6 format=2]

[ext_resource path="res://Menu/MainMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://Menu/ClassSelect.tscn" type="PackedScene" id=4]
[ext_resource path="res://Battle.tscn" type="PackedScene" id=5]

[node name="Main" type="Node"]
script = ExtResource( 3 )
battle_scene = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.698039, 0.698039, 0.698039, 1 )

[node name="MainMenu" parent="." instance=ExtResource( 1 )]

[node name="ClassSelect" parent="." instance=ExtResource( 4 )]
visible = false

[node name="Player" parent="." instance=ExtResource( 2 )]

[connection signal="finished_menu" from="MainMenu" to="." method="_on_MainMenu_finished_menu"]
[connection signal="class_finished" from="ClassSelect" to="." method="_on_ClassSelect_class_finished"]
[connection signal="class_select" from="ClassSelect" to="." method="_on_ClassSelect_class_select"]
